--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-# Make it use C-a, similar to screen..
-set -g prefix C-a
-bind C-a send-prefix
+# Use control-s instead of control-b
+set -g prefix C-s
+bind C-s send-prefix
 unbind C-b
 
 set -g default-terminal "screen-256color"
