--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g history-limit 50000
 set -g allow-rename off
 
 # Tmux mouse mode
-set-option -g mouse off
+set-option -g mouse on
 
 # THEME
 set -g status-bg colour235
